objects/ssot__PaymentMethod__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountID__c</fullName>
        <label>Account</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AlternatePaymentId__c</fullName>
        <label>Alternate Payment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BankTransferTenderId__c</fullName>
        <label>Bank Transfer Tender</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CashTenderId__c</fullName>
        <label>Cash Tender</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreditTenderId__c</fullName>
        <label>Credit Tender</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DigitalWalletId__c</fullName>
        <label>Digital Wallet</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialAccountId__c</fullName>
        <label>Financial Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Payment Method Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodStatus__c</fullName>
        <label>Payment Method Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodType__c</fullName>
        <label>Payment Method Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoucherId__c</fullName>
        <label>Voucher</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761214611_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentMethod_AlternatePaymentId_map_rel</label>
        <referenceTo>ssot__AlternatePayment__dlm</referenceTo>
        <relationshipLabel>PaymentMethod_AlternatePaymentId_map_rel</relationshipLabel>
        <relationshipName>rel_1697761214611_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761214685_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentMethod_BankTransferTenderId_m_rel</label>
        <referenceTo>ssot__BankTransferTender__dlm</referenceTo>
        <relationshipLabel>PaymentMethod_BankTransferTenderId_m_rel</relationshipLabel>
        <relationshipName>rel_1697761214685_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761214753_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentMethod_DigitalWalletId_map_Di_rel</label>
        <referenceTo>ssot__DigitalWallet__dlm</referenceTo>
        <relationshipLabel>PaymentMethod_DigitalWalletId_map_Di_rel</relationshipLabel>
        <relationshipName>rel_1697761214753_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>